--- a/index.html
+++ b/index.html
@@ -193,11 +193,8 @@
           class="section-home-header flex items-center justify-center min-h-screen relative"
         >
           <div
-            autoplay
-            loop
-            muted
-            playsinline
-            class="absolute inset-0 w-full h-full object-cover sm:h-[100vh] p-0 m-0 opacity-60"
+            autoplay muted loop playsinline
+            class="absolute inset-0 w-full h-full object-cover sm:h-[100vh]  "
           >
             <iframe allow="fullscreen;autoplay" allowfullscreen height="100%" src="https://streamable.com/e/5mpi3k?autoplay=1" width="100%"   class="w-[150%]  h-[150%] absolute -top-50">
 
