--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
       })(window, document);
     </script>
     <script>
-  window.addEventListener("load", function () {
-    const clickEvent = new MouseEvent("click", {
-      bubbles: true,
-      cancelable: true,
-      view: window,
-    });
+      window.addEventListener("load", function () {
+        const clickEvent = new MouseEvent("click", {
+          bubbles: true,
+          cancelable: true,
+          view: window,
+        });
 
-    document.body.dispatchEvent(clickEvent);
-  });
-</script>
+        document.body.dispatchEvent(clickEvent);
+      });
+    </script>
     <link rel="shortcut icon" type="image/x-icon" href="images/Voin/Voian-Simbolo.ico" /> 
      
   </head>
@@ -210,6 +210,30 @@
         width="100%" height="100%" allow="autoplay" allowfullscreen
         class="w-[150%] h-[150%] absolute -top-50">
 </iframe>
+<video id="meuVideo" autoplay muted playsinline>
+  <source src="seu-video.mp4" type="video/mp4">
+  Seu navegador não suporta vídeo HTML5.
+</video>
+
+<script>
+  window.addEventListener("load", function () {
+    const video = document.getElementById("meuVideo");
+
+    const clickEvent = new MouseEvent("click", {
+      bubbles: true,
+      cancelable: true,
+      view: window,
+    });
+
+    // Dispara o clique
+    document.body.dispatchEvent(clickEvent);
+
+    // Opcional: se quiser forçar o play também
+    video.play().catch((err) => {
+      console.warn("Não foi possível dar play automaticamente:", err);
+    });
+  });
+</script>
           </div>  
            
           <div
