--- a/Wendding.html
+++ b/Wendding.html
@@ -36,7 +36,18 @@
     />
   </head>
   <body>
-     
+    <div class="fixed bottom-4 right-4 z-90">
+      <a
+        href="https://wa.me/5551999509578?text=Ol%C3%A1%20Voian%2C%20Estou%20interessado%20em%20fazer%20um%20or%C3%A7amento."
+        target="_blank"
+      >
+        <img
+          src="./images/images-Picsart-BackgroundRemover.png"
+          alt="Fale conosco no WhatsApp"
+          class="w-14 h-14 z-900"
+        />
+      </a>
+    </div>
     <div class="page-wrapper">
       <div
         id="top"
@@ -206,7 +217,7 @@
             class="absolute inset-0 w-full h-full object-cover sm:h-[100vh]"
           >
             <source
-              src="/images/video-lancamento-pronto_pDz08EuC (1).mp4"
+              src="/images/Wendding/Casamento Gabi e Leo (1).mp4"
               type="video/mp4"
             />
           </video>
