--- a/Formatura.html
+++ b/Formatura.html
@@ -36,18 +36,7 @@
     />
   </head>
   <body>
-    <div class="fixed bottom-4 right-4 z-90">
-      <a
-        href="https://wa.me/5551999509578?text=Ol%C3%A1%20Voian%2C%20Estou%20interessado%20em%20fazer%20um%20or%C3%A7amento."
-        target="_blank"
-      >
-        <img
-          src="./images/images-Picsart-BackgroundRemover.png"
-          alt="Fale conosco no WhatsApp"
-          class="w-14 h-14 z-900"
-        />
-      </a>
-    </div>
+     
     <div class="page-wrapper">
       <div
         id="top"
@@ -212,7 +201,7 @@
           <video
             autoplay
             loop
-            muted
+          
             playsinline
             class="absolute inset-0 w-full h-full object-cover sm:h-[100vh]"
           >
@@ -250,6 +239,16 @@
           <div class="w-[100%] h-[20vh] sm:h-[60vh] mb-20 p-2">
             <video autoplay muted loop playsinline>
               <source src="images/MEDICINA UFRGS 27_02.mp4" type="video/mp4" />
+            </video>
+          </div>
+          <div class="w-[100%] h-[20vh] sm:h-[60vh] mb-20 p-2">
+            <video autoplay muted loop playsinline>
+              <source src="images/Formatura 28.12_v2.mp4" type="video/mp4" />
+            </video>
+          </div>
+          <div class="w-[100%] h-[20vh] sm:h-[60vh] mb-20 p-2">
+            <video autoplay muted loop playsinline>
+              <source src="images/Formatura SOU FORMANDO 22.12.mp4" type="video/mp4" />
             </video>
           </div>
         </section>
