--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             class="absolute inset-0 w-full h-full object-cover sm:h-[100vh]"
           >
             <source
-              src="/images/video-lancamento-pronto_pDz08EuC (1).mp4"
+              src="/images//Corporate/VIDEO LANÇAMENTO PRONTO.mp4"
               type="video/mp4"
             />
           </video>
