--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             class="absolute inset-0 w-full h-full object-cover sm:h-[100vh]"
           >
             <source
-              src="/images/Wendding/PRÉ WENDING MIRIÃ E CRIS mp4.mp4"
+              src="/images/Wendding/Casamento Gabi e Leo (1).mp4"
               type="video/mp4"
             />
           </video>
