--- a/Wendding.html
+++ b/Wendding.html
@@ -321,7 +321,7 @@
             </p>
             <video autoplay muted loop playsinline>
               <source
-                src="images/Wendding/PRÉ WENDING MIRIÃ E CRIS mp4.mp4"
+                src="images/Wendding/Casamento Gabi e Leo (1).mp4"
                 type="video/mp4"
               />
             </video>
@@ -336,7 +336,7 @@
             </p>
             <video autoplay muted loop playsinline>
               <source
-                src="images/Wendding/Leo & Ju - Best Moments.mp4"
+                 src="images/Wendding/Casamento Gabi e Leo (1).mp4"
                 type="video/mp4"
               />
             </video>
@@ -351,7 +351,7 @@
             </p>
             <video autoplay muted loop playsinline>
               <source
-                src="images/Wendding/Sameday Doglas & Jeh.mp4"
+               src="images/Wendding/Casamento Gabi e Leo (1).mp4"
                 type="video/mp4"
               />
             </video>
@@ -366,7 +366,7 @@
             </p>
             <video autoplay muted loop playsinline>
               <source
-                src="images/Wendding/Pre Wedding - Dudu & Ana.mp4"
+                src="images/Wendding/Casamento Gabi e Leo (1).mp4"
                 type="video/mp4"
               />
             </video>
