--- a/Wendding.html
+++ b/Wendding.html
@@ -306,15 +306,15 @@
           </div>
         </header>
 
-        <div class="tabs  mt-20">
-          <p>Menu</p>
+        <div class="tabs  ">
+          <p class="pt-[100px] ">Menu</p>
           <div class="tab active " onclick="showTab('video')">Gravações</div>
           <div class="tab " onclick="showTab('imagem')">Ensaios fotográficos</div>
         </div>
 
         <div id="video" class="content active">
           <div
-            class="sm:w-[70%] text-center h-[20vh] sm:h-[80vh] mb-40 m-auto p-2 video-section"
+            class="sm:w-[70%] text-center h-[20vh] sm:h-[80vh] mb-20 m-auto p-2 video-section"
           >
             <p
               class="text-white text-xl sm:text-2xl font-semibold tracking-wide mb-4"
@@ -324,7 +324,7 @@
            
           </div>
           <div
-            class="sm:w-[70%] text-center h-[20vh] sm:h-[80vh] mb-40 m-auto p-2 video-section"
+            class="sm:w-[70%] text-center h-[20vh] sm:h-[80vh] mb-20 m-auto p-2 video-section"
           >
             <p
               class="text-white text-xl sm:text-2xl font-semibold tracking-wide mb-4"
@@ -339,7 +339,7 @@
             ></iframe>
           </div>
           <div
-            class="sm:w-[70%] text-center h-[20vh] sm:h-[80vh] mb-40 m-auto p-2 video-section"
+            class="sm:w-[70%] text-center h-[20vh] sm:h-[80vh] mb-20 m-auto p-2 video-section"
           >
             <p
               class="text-white text-xl sm:text-2xl font-semibold tracking-wide mb-4"
@@ -349,7 +349,7 @@
             <iframe src="https://drive.google.com/file/d/1N30cHF4uzMMKO2B6DfA6ZxFLii_kT1gw/preview" width="100%" height="100%" allow="autoplay"></iframe>
           </div>
           <div
-            class="sm:w-[70%] text-center h-[20vh] sm:h-[80vh] mb-40 m-auto p-2 video-section"
+            class="sm:w-[70%] text-center h-[20vh] sm:h-[80vh] mb-20 m-auto p-2 video-section"
           >
             <p
               class="text-white text-xl sm:text-2xl font-semibold tracking-wide mb-4"
