--- a/Wendding.html
+++ b/Wendding.html
@@ -275,9 +275,10 @@
         <header
           class="section-home-header flex items-center justify-center min-h-screen relative"
         >
-           <video
+          <video
             autoplay
             loop
+            muted
             playsinline
             class="absolute inset-0 w-full h-full object-cover sm:h-[100vh]"
           >
