--- a/debutantes.html
+++ b/debutantes.html
@@ -279,7 +279,7 @@
             loop
             muted
             playsinline
-            class="absolute inset-0 w-full h-full object-cover sm:h-[100vh] opacity-30"
+            class="absolute inset-0 w-full h-full object-cover sm:h-[100vh]"
           >
             <source
               src="/images/Debuts/SameDay 15 da Isa.mp4"
