--- a/Wendding.html
+++ b/Wendding.html
@@ -28,8 +28,7 @@
         background-color: #121212;
         color: #fff;
         font-family: sans-serif;
-        text-align: center;
-        padding-top: 30px;
+        text-align: center; 
       }
 
       .tabs { 
@@ -280,10 +279,10 @@
             loop
             muted
             playsinline
-            class="absolute inset-0 w-full h-full object-cover sm:h-[100vh]"
+            class="absolute   inset-0 w-full h-full object-cover sm:h-[100vh] "
           >
             <source
-              src="/images/Wendding/Casamento Gabi e Leo (1).mp4"
+              src="/images//1M_GEOVANA.mov"
               type="video/mp4"
             />
           </video>
