--- a/Wendding.html
+++ b/Wendding.html
@@ -282,7 +282,7 @@
             class="absolute   inset-0 w-full h-full object-cover sm:h-[100vh] "
           >
             <source
-              src="/images//1M_GEOVANA.mov"
+              src="/images/Wendding/Casamento Gabi e Leo (1).mp4"
               type="video/mp4"
             />
           </video>
